# contentRX

./: .env.local.example  .gitignore  .gitmodules  .vercelignore  APPLY_GUIDE_INFRA.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE_GUIDE.md  BUILD_PLAN.md  BUILD_PLAN_v2.md  CHANGELOG.md  CLAUDE.md  CLI_REFERENCE.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  EVAL_PROTOCOL.md  EVAL_PROTOCOL_AMENDMENT_structured_inputs.md  GRM-06_PROPOSAL.md  JS_PARITY_v450.md  LICENSE  PATCH_QUEUE.md  README.md  SECURITY.md  customer-experience-design-2026-04-26.md  customer-journey-diagrams-2026-04-26.md  design-critique-2026-04-26.md  eslint.config.mjs  fix_stale_tests.sh  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json  patch_standards_library.py  pricing-and-unit-of-value-strategy-2026-04-26.md  pyproject.toml  session_summary_v440_final.md  taxonomy_refinement_log.md  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: parity.yml  (+20 more)
api/: evaluate.py
cli/: README.md  checker.py  classify.py  filter_standards.py  main.py  preprocess.py  validate.py
cli-client/: CLAUDE.md  LICENSE  README.md  pyproject.toml
cli-client/contentrx/: __init__.py  display_labels.py  example_cmd.py  humanize.py  main.py
cli-client/tests/: test_cli.py  test_display_labels.py
content-model/: CHANGELOG.md  LICENSE  README.md  SPEC.md  moments_taxonomy.json
contentrx-app/: .gitignore  CLAUDE.md
decisions/: 2026-04-25-private-taxonomy-pivot.md  2026-04-28-admin-echo-back-carveout.md  2026-04-28-customer-not-product.md  2026-04-29-suggestion-calibration-and-customer-ux.md  2026-05-06-corpus-license-trim.md  2026-05-06-product-extraction-deletion.md  2026-05-06-source-name-anonymization.md  2026-05-06-sources-page-retired.md  2026-05-09-case-study-feature-deprecated.md  2026-05-11-explicit-share-only.md  README.md
docs/: API_VERSIONING.md  HELD_OUT_GATE.md  account-setup-checklist.md  agent-github-app-setup.md  architecture-diagram.md  clerk-config-checklist.md  code-audit-2026-04-22.md  code-audit-2026-04-24.md  copy-vocabulary.md  figma-community-submission.md  handoff-figma-plugin-bug.md  integrity-sweep-2026-05-09.md  progress-story-2026-04-23.md  stripe-portal-config-checklist.md  substrate-repo-setup.md
docs-site/: CLAUDE.md  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tsconfig.json
essays/: README.md
evals/: README.md  case_study_candidates.json  content_type_mapping_v2.md  external_source_snippets.json  novel_cases.json  preference_pairs.json  rewrite_floor_eval.py  run_evals.py
external_signal/: README.md  __init__.py  allow_list.json  github_miner.py  intent_classifier.py  repo_quality.py
figma-plugin/: README.md  code.js  manifest.json  ui.html
github-action/: CLAUDE.md  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
lsp-server/: CLAUDE.md  README.md  pyproject.toml
lsp-server/src/contentrx_lsp/: __init__.py  auth.py  client.py  code_actions.py  diagnostics.py  humanize.py  parser.py  server.py
lsp-server/tests/: test_code_actions.py  test_diagnostics.py  test_parser.py  test_server_rate_limit.py
mcp-server/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
mcp-server/src/contentrx_mcp/: __init__.py  auth.py  client.py  display_labels.py  humanize.py  prompts.py  resources.py  server.py
mcp-server/tests/: test_auth.py  test_client.py  test_client_v2.py  test_custom_examples.py  test_display_labels.py  test_prompts.py  test_resources.py  test_server.py  test_substrate_fence.py  test_team_rules.py
reports/: README.md
scripts/: apply-agent-runs-migration.mjs  bootstrap.sh  check-copy-with-engine-cache.test.ts  check-copy-with-engine.test.ts  check-copy-with-engine.ts  check-display-labels-parity.py  check-humanize-parity.py  check_case_study_approval.py  check_held_out_convention.py  check_no_dup_files.sh  check_reports_staleness.py  check_taxonomy_changelog.py  diagnose-agent-installs.ts  export-corpus.ts  extract-customer-strings.test.ts  extract-customer-strings.ts  fetch-substrate.sh  generate_dpa.py  lint-customer-strings.test.ts  lint-customer-strings.ts  post-engine-check-comment.test.ts  post-engine-check-comment.ts  promote-admin-to-team.ts  reset-usage.ts  validate-substrate.py
src/: middleware.ts
standards/: standards_library.json
tests/: test_accuracy_generator.py  test_annotator_preferences.py  test_annual_audit.py  test_api_utils.py  test_apple_patches.py  test_audience.py  test_audit_2026_05_11.py  test_calibration_generator.py  test_case_study_approval_script.py  test_case_study_candidates.py  test_check_close_paraphrase.py  test_classify.py  test_classify_team_rule_prompt.py  test_cli.py  test_config.py  test_content_model_mirror.py  test_drift_check.py  test_engine_taxonomy_ts_mirror.py  test_examples_corpus.py  test_filter.py  test_github_miner.py  test_held_out.py  test_held_out_convention.py  test_integration_seams.py  test_intent_classifier.py  test_loader.py  test_models_envelope.py  test_moment_metadata_ts_mirror.py  test_moments_pipeline.py  test_moments_taxonomy_export.py  test_pipeline_run.py  test_preprocess.py  test_promote.py  test_public_envelope.py  test_refinement_candidate_detector.py  test_reports_staleness.py  test_rewrite_document_prompt.py  test_score_held_out_kappa.py  test_seed_preference_pairs.py  test_suggest_fix.py  (+10 more)
tools/: annotator_prompt.py  annual_audit_sample.py  annual_audit_score.py  audience_retest.py  auto_annotate.py  batch_summary.py  case_study.py  case_study_candidates.py  case_study_pick.py  check_close_paraphrase.py  drift_check.py  eval_metrics.py  export_moments.py  extracted.json  mailchimp_curated.json  mailchimp_eval_cases.json  migrate_eval_schema.py  parity_check.py  parity_js_runner.mjs  patch_extend_sources.py  pipeline_run.py  promote_cases.py  refinement_candidate_detector.py  review_queue.py  run_held_out.py  score_held_out_kappa.py  seed_preference_pairs.py  select_held_out.py  test_moments_pipeline.py  triage.py  triage_assist.py  triage_cli_patches.py
triage/: opendoor_2026-03-29.json
web/: README.md
(+555 files in other folders)
