[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-standards-checker"
version = "4.7.2"
description = "ContentRX content model for product copy. Source-available."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Robert Ballard"},
]
dependencies = [
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
content-checker = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"content_checker.standards" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
