[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-standards-checker"
version = "4.7.6"
description = "ContentRX content model for product copy. Source-available."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Robert Ballard"},
]
dependencies = [
    # Lower bound matches api/requirements.txt — the version Vercel
    # actually builds the Python function with. Upper bound prevents
    # the next Anthropic SDK major from silently breaking the engine.
    # The SDK uses cache_control blocks, cache_creation_input_tokens /
    # cache_read_input_tokens response fields, and per-stage timeout
    # shapes that have changed across pre-1.0 versions; we pin so a
    # naive `pip install -e .` matches the function's runtime SDK
    # rather than pulling 0.30.0 from the floor.
    "anthropic>=0.101.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
content-checker = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
# Exclude the private substrate directory from package discovery — its
# JSON files are loaded from a private submodule per ADR 2026-04-25 and
# must never end up in the published wheel.
exclude = ["content_checker.standards.private*"]

# No package-data declaration: the substrate JSON files used to be
# bundled here (`"content_checker.standards" = ["*.json"]`) but the
# substrate moved to the gitignored private/ subdir per ADR 2026-04-25.
# Adding the line back would re-leak the taxonomy through pip-installed
# wheels.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
